# yolov7-face-tensorrt

./: .gitignore  CMakeLists.txt  README.md  postprocess.cu  postprocess.h  preprocess.cu  preprocess.h  yolov7-face.cpp
onnx_model/: yolov7-lite-e.onnx
